--- a/style.css
+++ b/style.css
@@ -17,8 +17,11 @@ body{
 .container{
     overflow-x: hidden;
     display: flex;
+    flex-direction: column;
     width: 100%;
 }
+
+/* header styles */
 
 header{
     display: flex;
@@ -46,21 +49,65 @@ nav{
 
 nav ul{
     display: flex;
-    justify-content: space-between;
 }
 
 nav ul li{
     display: flex;
-    justify-content: space-between;
     align-items: center;
     list-style: none;
     padding: 30px;
 }
 
 nav ul li a{
-    justify-content: space-between;
     text-decoration: none;
     color: rgb(196, 194, 194);
     font-weight: 400;
+}
+
+/* hero styles */
+
+#hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.hero-image{
+    max-width: 50%;
+}
+
+#hero >h3{
+    font-size: 2rem;
+    width: 50%;
+    text-align: center;
+    line-height: 1.5;
+    margin-top: 30px;
+    font-weight: 700;
+}
+
+#hero >p{
+    text-align: center;
+    margin-top: 30px;
+    width: 50%;
+    font-size: 1.3rem;
+    font-weight: 300;
+    text-indent: -10px;
+    padding-left: 10px;
+    height: auto;
+}
+
+#hero >button{
+    width: 18%;
+    height: 50px;
+    color: #fff;
+    font-weight: bold;
+    background: #23c4bc;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50px;
+    margin-top: 30px;
 }
 
