--- a/style.css
+++ b/style.css
@@ -111,3 +111,28 @@ nav ul li a{
     margin-top: 30px;
 }
 
+/* services section */
+
+#services{
+    display: flex;
+    margin-top: 100px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.row{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.files{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
