--- a/style.css
+++ b/style.css
@@ -114,25 +114,125 @@ nav ul li a{
 /* services section */
 
 #services{
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    width: 100%;
+    grid-row-gap: 5rem;
+    margin-top: 150px;
+}
+
+.files{
     display: flex;
-    margin-top: 100px;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    text-align: center;
     width: 100%;
+}
+
+.files >h3{
+    margin-top: 30px;
+    letter-spacing: 1.5px;
+
+}
+
+.files >p{
+    width: 60%;
+    margin-top: 10px;
+}
+
+/* about section */
+#about{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    margin-top: 120px;
+}
+
+.about-image{
+    width: 50%;
+    margin-left: 60px;
+}
+
+.about-image >img{
+    max-width: 100%;
+    height: auto;
+}
+
+.about-text{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-text >h3{
+    font-size: 2.5rem;
+    width: 55%;
+    line-height: 1.5;
+}
+
+.about-text >p{
+    padding: 10px;
+    width: 90%;
+    height: auto;
+}
+
+.about-link{
+    display: flex;
+    margin-left: 10px;
+    align-items: center;
+}
+
+.about-link >img{
+    max-width: 100%;
+}
+
+/* testimonials */
+
+#testimonials{
+    display: flex;
+    width: 100%;
+    margin-top: 150px;
+    position: relative;
+}
+
+#testimonials >img{
+    height: 50px;
+    position: absolute;
+    left: 5%;
+    bottom: 78%;
+    z-index: -1;
 }
 
 .row{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    margin: 50px;
+    justify-content: space-around;
 }
 
-.files{
-    width: 40%;
+.col{
+    border-radius: 10px;
+    width: 30%;
+    height: auto;
+    padding: 20px;
+    /* box-shadow: 10px 10px 10px 10px #3f3f42; */
+    background: #1a1818;
+}
+
+.profile{
     display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
+    margin-top: 30px;
 }
 
+.profile >img{
+    max-width: 8%;
+    border-radius: 50%;
+}
+
+.image-text{
+    font-size: .8rem;
+    margin-left: 10px;
+}
