--- a/style.css
+++ b/style.css
@@ -236,3 +236,59 @@ nav ul li a{
     font-size: .8rem;
     margin-left: 10px;
 }
+
+/* banner */
+
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    margin-top: 150px;
+    background: #232424;
+    height: auto;
+    border-radius: 5px;
+}
+
+.banner-text{
+    width: 100%;
+    padding: 20px;
+    line-height: 2;
+}
+
+.banner-text >h3{
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+#form{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+#form >input{
+    height: 50px;
+    width: 60%;
+    border: none;
+    border-radius: 50px;
+    outline: none;
+    padding: 20px;
+    font-size: .8rem;
+}
+
+.form-button{
+    height: 50px;
+    border: none;
+    border-radius: 50px;
+    outline: none;
+    width: 30%;
+    font-weight: 700;
+    padding: 20px;
+}
