--- a/style.css
+++ b/style.css
@@ -270,12 +270,10 @@ header >i{
     margin: auto;
     text-align: center;
     padding: 10px;
-    margin-top: 150px;
+    margin-top: 250px;
     background: var(--introSignup-background);
     height: auto;
     border-radius: 5px;
-    left: 20%;
-    bottom: -400%;
     z-index: 99;
 }
 
@@ -672,10 +670,7 @@ header >i{
         background: var(--introSignup-background);
         height: auto;
         border-radius: 5px;
-        position: absolute;
-        left: -1%;
-        bottom: -850%;
-        z-index: 99;
+        margin-bottom: 20px;
     }
     
     .banner-text{
