--- a/style.css
+++ b/style.css
@@ -342,7 +342,8 @@ header>i {
     height: auto;
     background: var(--footer-background);
     position: relative;
-    padding-top: 150px;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 .description {
@@ -414,11 +415,23 @@ header>i {
     flex-direction: row;
 }
 
-.icons .fab {
+.social-icons {
     display: flex;
-    width: 100%;
-    height: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+}
+
+.social-icons i {
+    font-size: 1rem;
+    margin-left: 5px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #fff;
+    border-radius: 50%;
 }
 
 
